Todos-nodejs-/kubernetes/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: Todos-nodejs-
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: Todos-nodejs-
  template:
    metadata:
      labels:
        app: Todos-nodejs-
    spec:
      imagePullSecrets:
          - name: regcred
      containers:
        - name: Todos-nodejs-
          image: sohaash/todo_app:v0.2
          ports:
            - containerPort: 4000
          livenessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 4000
            initialDelaySeconds: 10
            periodSeconds: 10
